[tool.poetry]
name = "msgs"
version = "0.1.0"
description = ""
authors = ["Michel Perez <michel.ingesoft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
messagebird = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
